--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "depay-decentralized-exchanges",
-  "moduleName": "DEX",
-  "version": "1.0.0",
+  "moduleName": "Exchange",
+  "version": "0.1.0",
   "description": "",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
@@ -31,7 +31,12 @@
   },
   "homepage": "https://github.com/DePayFi/depay-decentralized-exchanges#readme",
   "private": false,
-  "dependencies": {},
+  "dependencies": {
+    "depay-blockchain-call": "^1.3.0",
+    "depay-blockchain-constants": "^1.3.0",
+    "depay-blockchain-token": "^0.12.0",
+    "depay-blockchain-transaction": "^1.0.0"
+  },
   "peerDependencies": {},
   "engines": {
     "node": ">=10"
@@ -48,7 +53,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "cypress": "^6.2.1",
-    "depay-web3mock": "^0.10.0",
+    "depay-web3mock": "^3.3.1",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-loader": "^4.0.2",
