--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "depay-decentralized-exchanges",
   "moduleName": "Exchange",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "JavaScript library simplifying decentralized exchange routing.",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
@@ -10,12 +10,12 @@
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && rollup -c",
+    "build": "rm -rf dist && rollup -c rollup.module.config.js",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "format": "prettier src --write",
     "prepublishOnly": "yarn build",
-    "start": "rollup -c rollup.demo.config.js -w",
+    "dev": "rollup -c rollup.dev.config.js -w",
     "test:units": "yarn build && npx jest --no-cache",
     "test": "yarn test:units"
   },
@@ -33,9 +33,9 @@
   "homepage": "https://github.com/DePayFi/depay-decentralized-exchanges#readme",
   "private": false,
   "dependencies": {
-    "depay-blockchain-call": "^1.3.0",
-    "depay-blockchain-constants": "^1.3.0",
-    "depay-blockchain-token": "^0.12.0",
+    "depay-blockchain-client": "^2.0.0",
+    "depay-blockchain-constants": "^1.4.0",
+    "depay-blockchain-token": "^1.3.0",
     "depay-blockchain-transaction": "^1.0.0"
   },
   "peerDependencies": {},
