--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "depay-web3-exchanges",
   "moduleName": "Web3Exchanges",
-  "version": "3.1.1",
+  "version": "4.0.0",
   "description": "JavaScript library simplifying decentralized web3 exchange routing for multiple blockchains and exchanges.",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
@@ -37,7 +37,7 @@
     "depay-web3-client": "^4.0.2",
     "depay-web3-constants": "^2.1.0",
     "depay-web3-tokens": "^3.0.3",
-    "depay-web3-transaction": "^2.4.1"
+    "depay-web3-transaction": "^3.1.0"
   },
   "peerDependencies": {},
   "engines": {
@@ -56,6 +56,7 @@
     "eslint": "^7.15.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
+    "ethers": "^5.4.5",
     "regenerator-runtime": "^0.13.7",
     "rollup": "^2.34.2",
     "rollup-plugin-delete": "^2.0.0",
