--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "depay-web3-exchanges",
   "moduleName": "Web3Exchanges",
-  "version": "5.1.0",
+  "version": "5.2.0",
   "description": "JavaScript library simplifying decentralized web3 exchange routing for multiple blockchains and exchanges.",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
@@ -33,13 +33,12 @@
   },
   "homepage": "https://github.com/DePayFi/depay-web3-exchanges#readme",
   "private": false,
-  "dependencies": {
-  },
+  "dependencies": {},
   "peerDependencies": {
     "depay-web3-client": "^5.1.0",
     "depay-web3-constants": "^3.0.1",
     "depay-web3-tokens": "^4.1.0",
-    "depay-web3-transaction": "^3.2.1"
+    "depay-web3-transaction": "^4.0.0"
   },
   "engines": {
     "node": ">=10"
@@ -53,13 +52,13 @@
     "@rollup/plugin-sucrase": "^3.1.0",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
+    "depay-web3-blockchains": "^2.4.0",
     "depay-web3-client": "^5.1.0",
     "depay-web3-constants": "^3.0.1",
-    "depay-web3-mock": "^7.0.0",
+    "depay-web3-mock": "^8.0.0",
     "depay-web3-tokens": "^4.1.0",
+    "depay-web3-transaction": "^4.0.0",
     "depay-web3-wallets": "^5.1.1",
-    "depay-web3-blockchains": "^2.4.0",
-    "depay-web3-transaction": "^3.2.1",
     "eslint": "^7.15.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
