--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "depay-web3-exchanges",
   "moduleName": "Web3Exchanges",
-  "version": "6.2.1",
+  "version": "6.2.2",
   "description": "JavaScript library simplifying decentralized web3 exchange routing for multiple blockchains and exchanges.",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
@@ -43,14 +43,13 @@
     "node": ">=10"
   },
   "devDependencies": {
+    "@depay/walletconnect": "^1.0.2",
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-sucrase": "^3.1.0",
-    "@walletconnect/client": "^1.6.5",
-    "@walletconnect/qrcode-modal": "^1.6.5",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
     "depay-web3-blockchains": "^2.6.0",
@@ -58,7 +57,7 @@
     "depay-web3-constants": "^3.0.1",
     "depay-web3-mock": "^8.2.7",
     "depay-web3-tokens": "^6.0.0",
-    "depay-web3-wallets": "^5.6.0",
+    "depay-web3-wallets": "^5.7.3",
     "eslint": "^7.15.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
