--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "depay-web3-exchanges",
+  "name": "@depay/web3-exchanges",
   "moduleName": "Web3Exchanges",
-  "version": "6.3.2",
+  "version": "7.0.0",
   "description": "JavaScript library simplifying decentralized web3 exchange routing for multiple blockchains and exchanges.",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
@@ -37,7 +37,7 @@
   "peerDependencies": {
     "depay-web3-client": "^6.0.0",
     "depay-web3-constants": "^3.0.1",
-    "depay-web3-tokens": "^6.0.0"
+    "@depay/web3-tokens": "^7.0.0"
   },
   "engines": {
     "node": ">=10"
@@ -56,7 +56,7 @@
     "depay-web3-client": "^6.0.0",
     "depay-web3-constants": "^3.0.1",
     "depay-web3-mock": "^8.2.7",
-    "depay-web3-tokens": "^6.0.0",
+    "@depay/web3-tokens": "^7.0.0",
     "depay-web3-wallets": "^5.7.3",
     "eslint": "^7.15.0",
     "eslint-loader": "^4.0.2",
