--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@depay/web3-exchanges",
   "moduleName": "Web3Exchanges",
-  "version": "7.1.2",
+  "version": "7.1.3",
   "description": "JavaScript library simplifying decentralized web3 exchange routing for multiple blockchains and exchanges.",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
@@ -35,7 +35,7 @@
   "private": false,
   "dependencies": {},
   "peerDependencies": {
-    "@depay/web3-client": "^7.1.0",
+    "@depay/web3-client": "^7.2.0",
     "@depay/web3-constants": "^4.0.1",
     "@depay/web3-tokens": "^7.2.0"
   },
@@ -45,13 +45,13 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
-    "@depay/walletconnect": "^1.0.2",
+    "@depay/walletconnect-v1": "^1.0.5",
     "@depay/web3-blockchains": "^3.0.0",
-    "@depay/web3-client": "^7.1.0",
+    "@depay/web3-client": "^7.2.0",
     "@depay/web3-constants": "^4.0.1",
     "@depay/web3-mock": "^9.1.1",
     "@depay/web3-tokens": "^7.2.0",
-    "@depay/web3-wallets": "^6.0.0",
+    "@depay/web3-wallets": "^6.1.5",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
