--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@depay/web3-exchanges",
   "moduleName": "Web3Exchanges",
-  "version": "8.1.0",
+  "version": "8.2.0",
   "description": "JavaScript library simplifying decentralized web3 exchange routing for multiple blockchains and exchanges.",
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
@@ -45,13 +45,14 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
+    "@depay/coinbase-wallet-sdk": "^1.0.2",
     "@depay/walletconnect-v1": "^1.0.18",
     "@depay/web3-blockchains": "^4.0.0",
     "@depay/web3-client": "^8.0.0",
     "@depay/web3-constants": "^5.0.0",
-    "@depay/web3-mock": "^11.0.0",
+    "@depay/web3-mock": "^11.7.0",
     "@depay/web3-tokens": "^8.0.0",
-    "@depay/web3-wallets": "^8.0.2",
+    "@depay/web3-wallets": "^10.0.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
