--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@depay/web3-exchanges",
   "moduleName": "Web3Exchanges",
-  "version": "8.4.0",
+  "version": "9.0.0",
   "description": "JavaScript library simplifying decentralized web3 exchange routing for multiple blockchains and exchanges.",
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
@@ -35,9 +35,10 @@
   "private": false,
   "dependencies": {},
   "peerDependencies": {
-    "@depay/web3-client": "^8.2.0",
-    "@depay/web3-constants": "^5.2.0",
-    "@depay/web3-tokens": "^8.1.0"
+    "@depay/web3-client": "^8.2.1",
+    "@depay/web3-constants": "^5.2.1",
+    "@depay/web3-tokens": "^8.1.0",
+    "ethers": "^5.6.6"
   },
   "engines": {
     "node": ">=16"
@@ -46,13 +47,13 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@depay/coinbase-wallet-sdk": "^1.0.5",
-    "@depay/walletconnect-v1": "^1.0.18",
+    "@depay/walletconnect-v1": "^1.1.0",
     "@depay/web3-blockchains": "^4.5.0",
-    "@depay/web3-client": "^8.2.0",
-    "@depay/web3-constants": "^5.2.0",
-    "@depay/web3-mock": "^11.8.0",
+    "@depay/web3-client": "^8.2.1",
+    "@depay/web3-constants": "^5.2.1",
+    "@depay/web3-mock": "^11.8.1",
     "@depay/web3-tokens": "^8.1.0",
-    "@depay/web3-wallets": "^11.0.0",
+    "@depay/web3-wallets": "^11.0.1",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
@@ -62,7 +63,7 @@
     "eslint": "^7.15.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
-    "ethers": "^5.6.5",
+    "ethers": "^5.6.6",
     "jest-environment-jsdom": "^28.1.0",
     "regenerator-runtime": "^0.13.7",
     "rollup": "^2.34.2",
