--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@depay/web3-exchanges",
   "moduleName": "Web3Exchanges",
-  "version": "9.3.0",
+  "version": "9.3.1",
   "description": "JavaScript library simplifying decentralized web3 exchange routing for multiple blockchains and exchanges.",
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
@@ -26,7 +26,7 @@
     "swap",
     "router"
   ],
-  "author": "depay.fi",
+  "author": "depay.com",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/DePayFi/web3-exchanges/issues"
