--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
   },
   "homepage": "https://github.com/DePayFi/web3-exchanges#readme",
   "private": false,
-  "dependencies": {},
+  "dependencies": {
+    "@depay/solana-web3.js": "^1.13.0"
+  },
   "peerDependencies": {
-    "@depay/web3-client": "^8.5.0",
-    "@depay/web3-constants": "^6.0.0",
-    "@depay/web3-tokens": "^8.2.0",
+    "@depay/web3-client": "^9.2.1",
+    "@depay/web3-constants": "^6.2.2",
+    "@depay/web3-tokens": "^9.2.1",
     "ethers": "^5.6.8"
   },
   "engines": {
@@ -46,14 +48,14 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
-    "@depay/coinbase-wallet-sdk": "^1.0.5",
+    "@depay/coinbase-wallet-sdk": "^1.1.0",
     "@depay/walletconnect-v1": "^1.7.8",
-    "@depay/web3-blockchains": "^5.0.1",
-    "@depay/web3-client": "^8.5.0",
-    "@depay/web3-constants": "^6.0.0",
-    "@depay/web3-mock": "^11.11.0",
-    "@depay/web3-tokens": "^8.2.0",
-    "@depay/web3-wallets": "^11.1.0",
+    "@depay/web3-blockchains": "^5.0.4",
+    "@depay/web3-client": "^9.2.1",
+    "@depay/web3-constants": "^6.2.2",
+    "@depay/web3-mock": "^13.12.5",
+    "@depay/web3-tokens": "^9.2.1",
+    "@depay/web3-wallets": "^12.1.1",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
@@ -70,6 +72,7 @@
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.1.0",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "webpack": "^5.74.0"
   }
 }
