--- a/package.json
+++ b/package.json
@@ -33,11 +33,9 @@
   },
   "homepage": "https://github.com/DePayFi/web3-exchanges#readme",
   "private": false,
-  "dependencies": {
-    "@depay/solana-web3.js": "^1.13.0"
-  },
   "peerDependencies": {
-    "@depay/web3-client": "^9.2.1",
+    "@depay/solana-web3.js": "^1.16.2",
+    "@depay/web3-client": "^9.3.0",
     "@depay/web3-constants": "^6.2.2",
     "@depay/web3-tokens": "^9.2.1",
     "ethers": "^5.6.8"
@@ -51,9 +49,10 @@
     "@depay/coinbase-wallet-sdk": "^1.1.0",
     "@depay/walletconnect-v1": "^1.7.8",
     "@depay/web3-blockchains": "^5.0.4",
-    "@depay/web3-client": "^9.2.1",
+    "@depay/solana-web3.js": "^1.16.2",
+    "@depay/web3-client": "^9.3.0",
     "@depay/web3-constants": "^6.2.2",
-    "@depay/web3-mock": "^13.12.5",
+    "@depay/web3-mock": "^13.13.0",
     "@depay/web3-tokens": "^9.2.1",
     "@depay/web3-wallets": "^12.1.1",
     "@rollup/plugin-commonjs": "^18.0.0",
