--- a/package.json
+++ b/package.json
@@ -47,20 +47,22 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@depay/coinbase-wallet-sdk": "^1.1.0",
+    "@depay/solana-web3.js": "^1.17.5",
     "@depay/walletconnect-v1": "^1.7.8",
     "@depay/web3-blockchains": "^6.0.2",
-    "@depay/solana-web3.js": "^1.17.5",
     "@depay/web3-client": "^9.4.0",
     "@depay/web3-constants": "^6.2.2",
     "@depay/web3-mock": "^13.13.1",
     "@depay/web3-tokens": "^9.4.1",
     "@depay/web3-wallets": "^12.1.2",
+    "@peculiar/webcrypto": "^1.4.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-sucrase": "^3.1.0",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
+    "cross-fetch": "^3.1.5",
     "eslint": "^7.15.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
@@ -72,6 +74,7 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.1.0",
     "tslib": "^2.3.1",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "xhr2": "^0.2.1"
   }
 }
