--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@depay/web3-exchanges",
   "moduleName": "Web3Exchanges",
-  "version": "9.3.1",
+  "version": "10.0.0",
   "description": "JavaScript library simplifying decentralized web3 exchange routing for multiple blockchains and exchanges.",
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
@@ -31,13 +31,13 @@
   "bugs": {
     "url": "https://github.com/DePayFi/web3-exchanges/issues"
   },
-  "homepage": "https://github.com/DePayFi/web3-exchanges#readme",
+  "homepage": "https://depay.com",
   "private": false,
-  "dependencies": {},
   "peerDependencies": {
-    "@depay/web3-client": "^8.5.0",
-    "@depay/web3-constants": "^6.0.0",
-    "@depay/web3-tokens": "^8.2.0",
+    "@depay/solana-web3.js": "^1.19.0",
+    "@depay/web3-client": "^9.6.0",
+    "@depay/web3-constants": "^6.2.3",
+    "@depay/web3-tokens": "^9.8.0",
     "ethers": "^5.6.8"
   },
   "engines": {
@@ -46,20 +46,23 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
-    "@depay/coinbase-wallet-sdk": "^1.0.5",
-    "@depay/walletconnect-v1": "^1.7.8",
-    "@depay/web3-blockchains": "^5.0.1",
-    "@depay/web3-client": "^8.5.0",
-    "@depay/web3-constants": "^6.0.0",
-    "@depay/web3-mock": "^11.11.0",
-    "@depay/web3-tokens": "^8.2.0",
-    "@depay/web3-wallets": "^11.1.0",
+    "@depay/coinbase-wallet-sdk": "^1.1.0",
+    "@depay/solana-web3.js": "^1.19.0",
+    "@depay/walletconnect-v1": "^1.7.10",
+    "@depay/web3-blockchains": "^6.1.1",
+    "@depay/web3-client": "^9.6.0",
+    "@depay/web3-constants": "^6.2.3",
+    "@depay/web3-mock": "^13.20.1",
+    "@depay/web3-tokens": "^9.8.0",
+    "@depay/web3-wallets": "^12.2.0",
+    "@peculiar/webcrypto": "^1.4.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-sucrase": "^3.1.0",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
+    "cross-fetch": "^3.1.5",
     "eslint": "^7.15.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
@@ -70,6 +73,8 @@
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.1.0",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "webpack": "^5.74.0",
+    "xhr2": "^0.2.1"
   }
 }
