--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@depay/web3-exchanges",
   "moduleName": "Web3Exchanges",
-  "version": "11.0.2",
+  "version": "11.1.0",
   "description": "JavaScript library simplifying decentralized web3 exchange routing for multiple blockchains and exchanges.",
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
@@ -10,10 +10,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && rollup -c rollup.module.config.js",
+    "build": "rm -rf dist && rollup -c rollup.module.config.js && rollup -c rollup.module.evm.config.js",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
-    "prepublishOnly": "yarn build",
     "dev": "rollup -c rollup.dev.config.js -w",
     "test:units": "yarn build && npx jest --no-cache",
     "test": "yarn test:units"
@@ -35,9 +34,9 @@
   "private": false,
   "peerDependencies": {
     "@depay/solana-web3.js": "^1.19.0",
-    "@depay/web3-client": "^10.1.7",
-    "@depay/web3-constants": "^6.3.1",
-    "@depay/web3-tokens": "^9.11.4",
+    "@depay/web3-client": "^10.1.20",
+    "@depay/web3-constants": "^6.3.2",
+    "@depay/web3-tokens": "^9.12.6",
     "ethers": "^5.7.1"
   },
   "engines": {
@@ -49,12 +48,15 @@
     "@depay/coinbase-wallet-sdk": "^1.1.0",
     "@depay/solana-web3.js": "^1.19.0",
     "@depay/walletconnect-v1": "^1.7.10",
-    "@depay/web3-blockchains": "^6.2.0",
-    "@depay/web3-client": "^10.1.7",
-    "@depay/web3-constants": "^6.3.1",
-    "@depay/web3-mock": "^13.22.1",
-    "@depay/web3-tokens": "^9.11.4",
-    "@depay/web3-wallets": "^12.3.3",
+    "@depay/web3-blockchains": "^6.2.3",
+    "@depay/web3-client": "^10.1.20",
+    "@depay/web3-client-evm": "^10.1.20",
+    "@depay/web3-constants": "^6.3.2",
+    "@depay/web3-mock": "^13.22.10",
+    "@depay/web3-tokens": "^9.12.6",
+    "@depay/web3-tokens-evm": "^9.12.6",
+    "@depay/web3-wallets": "^12.3.9",
+    "@depay/web3-wallets-evm": "^12.3.9",
     "@peculiar/webcrypto": "^1.4.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
