--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && rollup -c rollup.module.config.js && rollup -c rollup.module.evm.config.js",
+    "build": "rm -rf dist && rollup -c rollup.module.config.js && rollup -c rollup.module.evm.config.js && rollup -c rollup.module.solana.config.js",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "dev": "rollup -c rollup.dev.config.js -w",
@@ -33,10 +33,10 @@
   "homepage": "https://depay.com",
   "private": false,
   "peerDependencies": {
-    "@depay/solana-web3.js": "^1.19.0",
-    "@depay/web3-client": "^10.4.1",
+    "@depay/solana-web3.js": "^1.20.15",
+    "@depay/web3-client": "^10.6.2",
     "@depay/web3-constants": "^6.4.2",
-    "@depay/web3-tokens": "^9.12.8",
+    "@depay/web3-tokens": "^9.15.0",
     "ethers": "^5.7.1"
   },
   "engines": {
@@ -45,38 +45,41 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
-    "@depay/coinbase-wallet-sdk": "^1.1.0",
-    "@depay/solana-web3.js": "^1.19.0",
-    "@depay/walletconnect-v1": "^1.7.10",
-    "@depay/web3-blockchains": "^6.2.3",
-    "@depay/web3-client": "^10.4.1",
-    "@depay/web3-client-evm": "^10.4.1",
+    "@depay/coinbase-wallet-sdk": "^3.6.4",
+    "@depay/solana-web3.js": "^1.20.15",
+    "@depay/walletconnect-v1": "^1.8.0",
+    "@depay/walletconnect-v2": "^2.4.2",
+    "@depay/web3-blockchains": "^6.5.1",
+    "@depay/web3-client": "^10.6.2",
+    "@depay/web3-client-evm": "^10.6.2",
+    "@depay/web3-client-solana": "^10.6.2",
     "@depay/web3-constants": "^6.4.2",
-    "@depay/web3-mock": "^13.22.10",
-    "@depay/web3-tokens": "^9.12.8",
-    "@depay/web3-tokens-evm": "^9.12.8",
-    "@depay/web3-wallets": "^15.2.4",
-    "@depay/web3-wallets-evm": "^15.2.4",
-    "@peculiar/webcrypto": "^1.4.0",
+    "@depay/web3-mock": "^13.25.5",
+    "@depay/web3-tokens": "^9.15.0",
+    "@depay/web3-tokens-evm": "^9.15.0",
+    "@depay/web3-tokens-solana": "^9.15.0",
+    "@depay/web3-wallets": "^15.3.0",
+    "@depay/web3-wallets-evm": "^15.3.0",
+    "@depay/web3-wallets-solana": "^15.3.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-sucrase": "^3.1.0",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
-    "cross-fetch": "^3.1.5",
     "eslint": "^7.15.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "ethers": "^5.7.1",
     "jest-environment-jsdom": "^28.1.0",
+    "node-fetch": "^2.6.9",
     "regenerator-runtime": "^0.13.7",
     "rollup": "^2.34.2",
     "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-jscc": "^2.0.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.1.0",
     "tslib": "^2.3.1",
-    "webpack": "^5.74.0",
-    "xhr2": "^0.2.1"
+    "webpack": "^5.74.0"
   }
 }
