--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@depay/web3-blockchains": "^7.1.0",
     "@depay/web3-client": "^10.7.0",
     "@depay/web3-tokens": "^9.16.0",
+    "decimal.js": "^10.4.3",
     "ethers": "^5.7.1"
   },
   "engines": {
@@ -67,6 +68,7 @@
     "@types/node": "^18.15.5",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
+    "decimal.js": "^10.4.3",
     "eslint": "^7.15.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
