--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@depay/web3-exchanges",
   "moduleName": "Web3Exchanges",
-  "version": "11.6.1",
+  "version": "12.0.0",
   "description": "JavaScript library simplifying decentralized web3 exchange routing for multiple blockchains and exchanges.",
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
@@ -33,10 +33,11 @@
   "homepage": "https://depay.com",
   "private": false,
   "peerDependencies": {
-    "@depay/solana-web3.js": "^1.20.15",
+    "@depay/solana-web3.js": "^1.21.2",
     "@depay/web3-blockchains": "^7.1.0",
     "@depay/web3-client": "^10.7.0",
-    "@depay/web3-tokens": "^9.16.0",
+    "@depay/web3-tokens": "^9.17.0",
+    "decimal.js": "^10.4.3",
     "ethers": "^5.7.1"
   },
   "engines": {
@@ -46,20 +47,20 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@depay/coinbase-wallet-sdk": "^3.6.4",
-    "@depay/solana-web3.js": "^1.20.15",
+    "@depay/solana-web3.js": "^1.21.2",
     "@depay/walletconnect-v1": "^1.8.0",
     "@depay/walletconnect-v2": "^2.4.2",
     "@depay/web3-blockchains": "^7.1.0",
     "@depay/web3-client": "^10.7.0",
     "@depay/web3-client-evm": "^10.7.0",
     "@depay/web3-client-solana": "^10.7.0",
-    "@depay/web3-mock": "^13.26.0",
-    "@depay/web3-tokens": "^9.16.0",
-    "@depay/web3-tokens-evm": "^9.16.0",
-    "@depay/web3-tokens-solana": "^9.16.0",
-    "@depay/web3-wallets": "^15.4.0",
-    "@depay/web3-wallets-evm": "^15.4.0",
-    "@depay/web3-wallets-solana": "^15.4.0",
+    "@depay/web3-mock": "^14.1.0",
+    "@depay/web3-tokens": "^9.17.0",
+    "@depay/web3-tokens-evm": "^9.17.0",
+    "@depay/web3-tokens-solana": "^9.17.0",
+    "@depay/web3-wallets": "^15.5.0",
+    "@depay/web3-wallets-evm": "^15.5.0",
+    "@depay/web3-wallets-solana": "^15.5.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
@@ -67,6 +68,7 @@
     "@types/node": "^18.15.5",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
+    "decimal.js": "^10.4.3",
     "eslint": "^7.15.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
