--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "ethers": "^5.7.1",
-    "jest-environment-jsdom": "^28.1.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "node-fetch": "^2.6.9",
     "regenerator-runtime": "^0.13.7",
     "rollup": "^2.34.2",
