--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "rollup-plugin-serve": "^1.1.0",
     "tslib": "^2.3.1",
     "typescript": "^5.0.2",
+    "util": "^0.12.5",
     "webpack": "^5.74.0"
   }
 }
