--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   "private": false,
   "peerDependencies": {
     "@depay/solana-web3.js": "^1.26.0",
-    "@depay/web3-blockchains": "^9.3.6",
-    "@depay/web3-client": "^10.18.4",
+    "@depay/web3-blockchains": "^9.4.2",
+    "@depay/web3-client": "^10.18.7",
     "@depay/web3-tokens": "^10.3.0",
     "decimal.js": "^10.4.3",
     "ethers": "^5.7.1"
@@ -46,21 +46,20 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
-    "@depay/coinbase-wallet-sdk": "^3.6.4",
+    "@depay/coinbase-wallet-sdk": "^3.8.4",
     "@depay/solana-web3.js": "^1.26.0",
-    "@depay/walletconnect-v1": "^1.8.0",
-    "@depay/walletconnect-v2": "^2.9.2",
-    "@depay/web3-blockchains": "^9.3.6",
-    "@depay/web3-client": "^10.18.4",
-    "@depay/web3-client-evm": "^10.18.4",
-    "@depay/web3-client-solana": "^10.18.4",
+    "@depay/walletconnect-v2": "^2.12.2",
+    "@depay/web3-blockchains": "^9.4.2",
+    "@depay/web3-client": "^10.18.7",
+    "@depay/web3-client-evm": "^10.18.7",
+    "@depay/web3-client-solana": "^10.18.7",
     "@depay/web3-mock": "^14.17.0",
     "@depay/web3-tokens": "^10.3.0",
     "@depay/web3-tokens-evm": "^10.3.0",
     "@depay/web3-tokens-solana": "^10.3.0",
-    "@depay/web3-wallets": "^16.1.0",
-    "@depay/web3-wallets-evm": "^16.1.0",
-    "@depay/web3-wallets-solana": "^16.1.0",
+    "@depay/web3-wallets": "^17.1.0",
+    "@depay/web3-wallets-evm": "^17.1.0",
+    "@depay/web3-wallets-solana": "^17.1.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
@@ -86,5 +85,9 @@
     "typescript": "^5.0.2",
     "util": "^0.12.5",
     "webpack": "^5.74.0"
+  },
+  "resolutions": {
+    "clipboardy": "3.0.0",
+    "lru-cache": "10.2.0"
   }
 }
