--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@depay/web3-exchanges",
   "moduleName": "Web3Exchanges",
-  "version": "13.17.3",
+  "version": "14.0.0",
   "description": "JavaScript library simplifying decentralized web3 exchange routing for multiple blockchains and exchanges.",
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
@@ -10,7 +10,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && rollup -c rollup.module.config.js && rollup -c rollup.module.evm.config.js && rollup -c rollup.module.solana.config.js",
+    "build": "rm -rf dist && rollup -c rollup.module.config.js && rollup -c rollup.module.evm.config.js && rollup -c rollup.module.svm.config.js",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "dev": "rollup -c rollup.dev.config.js -w",
@@ -33,10 +33,10 @@
   "homepage": "https://depay.com",
   "private": false,
   "peerDependencies": {
-    "@depay/solana-web3.js": "^1.26.0",
-    "@depay/web3-blockchains": "^9.7.8",
-    "@depay/web3-client": "^10.19.0",
-    "@depay/web3-tokens": "^10.4.4",
+    "@depay/solana-web3.js": "^1.98.0",
+    "@depay/web3-blockchains": "^9.7.9",
+    "@depay/web3-client": "^11.0.1",
+    "@depay/web3-tokens": "^11.0.0",
     "decimal.js": "^10.4.3",
     "ethers": "^5.7.1"
   },
@@ -47,19 +47,19 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@depay/coinbase-wallet-sdk": "^3.8.4",
-    "@depay/solana-web3.js": "^1.26.0",
+    "@depay/solana-web3.js": "^1.98.0",
     "@depay/walletconnect-v2": "^2.12.2",
-    "@depay/web3-blockchains": "^9.7.8",
-    "@depay/web3-client": "^10.19.0",
-    "@depay/web3-client-evm": "^10.19.0",
-    "@depay/web3-client-solana": "^10.19.0",
-    "@depay/web3-mock": "^14.19.1",
-    "@depay/web3-tokens": "^10.4.4",
-    "@depay/web3-tokens-evm": "^10.4.4",
-    "@depay/web3-tokens-solana": "^10.4.4",
-    "@depay/web3-wallets": "^17.3.0",
-    "@depay/web3-wallets-evm": "^17.3.0",
-    "@depay/web3-wallets-solana": "^17.3.0",
+    "@depay/web3-blockchains": "^9.7.9",
+    "@depay/web3-client": "^11.0.1",
+    "@depay/web3-client-evm": "^11.0.1",
+    "@depay/web3-client-svm": "^11.0.1",
+    "@depay/web3-mock": "^15.1.1",
+    "@depay/web3-tokens": "^11.0.0",
+    "@depay/web3-tokens-evm": "^11.0.0",
+    "@depay/web3-tokens-svm": "^11.0.0",
+    "@depay/web3-wallets": "^18.0.0",
+    "@depay/web3-wallets-evm": "^18.0.0",
+    "@depay/web3-wallets-svm": "^18.0.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
